<package>
  <name>smach_tutorials</name>
  <version>0.1.0</version>
  <description>
    This package containes numerous examples of how to use SMACH. See the examples directory.
  </description>
  <author>Jonathan Bohren</author>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/smach_tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>

  <run_depend>turtlesim</run_depend>
  <!-- <run_depend>turtle_actionlib</run_depend> -->

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>

</package>
